# pyrise

./: .gitignore  LICENSE  README.md  lambda_function.py  local_function.py  main.py  pyproject.toml
_archive/: lambda_function.py
aws/: deploy.sh  setup.sh  teardown.sh
aws/permissions/: policy.json  targets.json
docs/: concepts.md
pyrise/: __init__.py  cse.py  gmail.py  quotes.py  recipe.py  recipes.py
templates/: email.html
